--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "React app by Rudransh Bhardwaj",
   "main": "App.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "parcel index.html"
   },
   "repository": {
     "type": "git",
