--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "homepage": "https://github.com/rudranshBhardwaj24/React#readme",
   "devDependencies": {
     "parcel": "^2.8.3",
-    "process": "^0.11.10"
+    "postcss": "^8.4.22",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.3.1"
   },
   "dependencies": {
     "react": "^18.2.0",
