--- a/package.json
+++ b/package.json
@@ -22,6 +22,13 @@
   },
   "homepage": "https://github.com/rudranshBhardwaj24/React#readme",
   "devDependencies": {
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
+    "@testing-library/react": "^14.0.0",
+    "babel-jest": "^29.5.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "parcel": "^2.8.3",
     "postcss": "^8.4.22",
     "process": "^0.11.10",
